src/snapshots/afrotd__parser__tests__interpretation_4.2.4_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 4
  - 2
  - 4
index: 1
text: "Ein Spieler, der sich mit einem Fuß hinter einer Goalline im Aus\nbefindet, berührt einen freien Ball im Spielfeld."
ruling: "Der Ball ist\ndead und befindet sich im Aus an seinem vordersten Punkt im Spielfeld.\nWenn dieser freie Ball ein unberührter Free Kick war, so ist das ein Free\nKick im Aus und ein Foul. Strafe – 5 Meter vom Previous Spot oder\nTeam B’s Ball 30 Meter jenseits Team A’s Free Kick-Linie."
