src/snapshots/afrotd__parser__tests__interpretation_5.1.3_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 5
  - 1
  - 3
index: 1
text: "A88, der sich in der Luft befindet, erlangt einen Meter innerhalb\nder gegnerischen Endzone sichere Kontrolle über einen legalen Vorwärtspass. Als A88 den Ball sicher kontrolliert, wird er (a) von B21 berührt und A88 kommt zuerst auf seinen Knien an der B-1 mit dem Ball in\nseinen Händen auf dem Boden auf, wobei er die Ballkontrolle behält; (b)\nwird A88 von B21 berührt und kommt zuerst auf seinen Füßen an der\nB-1 auf dem Boden auf, wobei er die Ballkontrolle behält."
ruling: "Touchdown in beiden Fällen (Regel 5.1.3.a Ausnahme 2, 8.2.1.b)"
