src/snapshots/afrotd__parser__tests__interpretation_5.1.3_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 5
  - 1
  - 3
index: 4
text: "A4 hechtet mit dem Ball in seinem Besitz über die 50-Meterlinie,\nwobei der Ball die 50-Meterlinie durchbricht, die die Line to Gain für\neinen First Down ist. Er wird zur A-49 zurückgedrängt, wo ein Körperteil,\naußer Hand oder Fuß, den Boden berührt."
ruling: "First Down am\nPunkt des Forward Progress (Regel 4.1.3.b)."
