src/snapshots/afrotd__parser__tests__interpretation_5.1.3_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 5
  - 1
  - 3
index: 6
text: "A5 hechtet mit dem Ball in seinem Besitz über die Goalline,\nwobei der Ball die Goalline durchbricht, und wird bis an die B-1 zurückgedrängt, wo ein Körperteil von A5, außer dessen Hand oder Fuß, den\nBoden berührt."
ruling: "Touchdown. Der Ball wird dead, wenn er in\nA5’s Besitz die Fläche der Goalline durchbricht."
