src/snapshots/afrotd__parser__tests__interpretation_5.2.3_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 5
  - 2
  - 3
index: 1
text: "Team A’s legaler Vorwärtspass prallt im vierten Down auf den\nBoden, nachdem er einen ursprünglich unberechtigten Team A-Spieler\nberührt hat, der sich illegal mehr als drei Meter jenseits der neutralen\nZone befindet."
ruling: "Foul, unberechtigt downfield – 5 Meter vom\nPrevious Spot. Team B’s Ball, First Down und 10, wenn die Strafe abgelehnt wird (Regel 7.3.10)."
