src/snapshots/afrotd__parser__tests__interpretation_5.2.7_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 5
  - 2
  - 7
index: 1
text: "3. und 4 von der B-30. Ballträger A22 geht an der B-18 ins Aus.\nB88 begeht ein Foul, unmittelbar nachdem der Ball im Aus ist."
ruling: "First Down und Goal für Team A von der B-9. Die Game Clock\nstartet, außer nach dem Zwei-Minuten-Timeout, mit der Ballfreigabe."
