src/snapshots/afrotd__parser__tests__interpretation_5.2.7_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 5
  - 2
  - 7
index: 2
text: "4. und 4 von der A-16. Ballträger A22 geht an der A-18 ins Aus.\nA77 begeht ein Foul, unmittelbar nachdem der Ball im Aus ist."
ruling: "Team B’s Ball von der A-9. First Down und Goal. Die Game Clock\nstartet mit dem Snap."
